# roc-lsp

./: CompletionItemKind.roc  Core.roc  DecodeDSL.roc  DecodeUtils.roc  DelayDecode.roc  Handlers.roc  JsonRpc.roc  JsonVal.roc  JsonVal2.roc  LSPTypesFull.roc  LspTypes.roc  NewJson.roc  README.md  RecordAbilities.roc  RequestMessage.roc  ServerMessages.roc  TagDecoding.roc  Union.roc  UnionTags.roc  Wrap.roc  benchmark.roc  flake.nix  formatted-json.json  jsonBenchmark.roc  main.roc
Types/: Option.roc  ResOption.roc  Union2.roc  Union3.roc  Union5.roc
experiments/: TagDecoding.roc
jsonBench/: Program.fs  jsonBench.fsproj
rust/: Cargo.toml
rust/benches/: json_benchmark.rs
rust/src/: main.rs
