[package]
name = "rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
criterion = "0.5.1"
serde = "1.0.198"
serde_json = "1.0.116"
[[bench]]
name = "json_benchmark"
harness = false

[profile.release]
lto = true